--- a/shared/src/main/res/values-ru/strings.xml
+++ b/shared/src/main/res/values-ru/strings.xml
@@ -426,6 +426,7 @@
     <string name="signature_summary">Подпись не будет отображаться в списке сообщений Pulse, её увидит только получатель сообщения.</string>
     <string name="cleanup_old_messages">Удалить старые сообщения</string>
     <string name="cleanup_old_messages_summary">Это выполняется один раз в день для удаления любых сообщений, которые были старше вашего выбранного периода времени</string>
+    <string name="cleanup_old_messages_now_summary">Запуск удаления любых сообщений в этом разговоре старше выбранного периода времени</string>
     <string name="delayed_sending">Отложенная отправка</string>
     <string name="quick_compose">Быстрый ответ</string>
     <string name="secure_private_conversations">Защищённые личные диалоги</string>
@@ -459,6 +460,7 @@
     <string name="contact_card">Карточка контакта</string>
     <string name="conversation_with">Диалог с %1$s</string>
     <string name="send">Отправить</string>
+    <!-- Passcode Entry -->
     <!-- Other -->
     <string name="updating_database">Ищем последние сообщения...</string>
     <string name="dashclock_description">Информация о непрочитанных SMS/MMS</string>
